<?xml version="1.0"?>
<package format="2">
  <name>mapper_emvs</name>
  <version>0.0.0</version>
  <description>Open implementation of EMVS (Event-based Multi-View Stereo)</description>
  <maintainer email="rebecq@ifi.uzh.ch">Henri Rebecq</maintainer>

  <license>see LICENSE</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>dvs_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>image_geometry</depend>
  <depend>minkindr</depend>
  <depend>cartesian3dgrid</depend>
  <depend>rosbag</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>pcl_ros</depend>
  
  <export>

  </export>
</package>
